# lib-utils

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  jupytext.toml  pyproject.toml  requirements.txt  setup.py
utils/: __init__.py  clipboard_utils.py  demo.py  electronics_utils.py  log_actions.py  math_utils.py  pkg_test.py  selenium_utils.py  sqlite_utils.py  utilities.py  utils_demo.py  widget_utils.py
utils/_internal/: util_binary.py  util_collections.py  util_dataframe.py  util_demo.py  util_filesystem.py  util_ipython.py  util_lan_monitor.py  util_output.py  util_runtime.py  util_testing.py  util_text.py  util_threads.py  util_time.py  util_web.py
utils/standalone/: adb_utils.py  clipboard_utils.py  cryptography_utils.py  electronics_utils.py  git_actions.py  gsheets_utils.py  log_actions.py  math_utils.py  notify_utils.py  pdf_utils.py  playwright_utils.py  selenium_utils.py  slack_utils.py  solidworks_pdm_utils.py  sops_utils.py  sql_utils.py  sqlite_utils.py  telegram_utils.py  ui_utils.py  widget_utils.py  win_automation_utils.py
utils/standalone/csv_plotter/: csv_plotter.py  csv_plotter_dash.py
utils/tools/: region_setup.py  scratchpad.ipynb  scratchpad.py  script_collections.py
