[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lib-utils"
version = "0.1.0"
description = "Personal helper utilities for engineering test automation"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.3",
    "pandas>=2.3",
    "ipython>=9.15.0",
]

[project.optional-dependencies]
# pip install "lib-utils[requests]"
requests = [
    "requests>=2.32",
]

# pip install "lib-utils[git]"
git = [
    "python-git-info>=0.8",
]

# pip install "lib-utils[crypto]"
crypto = [
    "cryptography>=48.0.1",
]

# pip install "lib-utils[pdf]"
pdf = [
    "pikepdf>=10.2",
]

# pip install "lib-utils[sql]"
sql = [
    "pyodbc>=5.3.0",
]

# pip install "lib-utils[cv]"
cv = [
    "opencv-python>=5.0",
]

# pip install "lib-utils[clipboard]"
clipboard = [
    "pyperclip>=1.9.0",
]

# pip install "lib-utils[pillow]"
pillow = [
    "Pillow>=12.0",
]

# pip install "lib-utils[widgets]"
widgets = [
    "ipywidgets>=8.1.8",
]

# pip install "lib-utils[slack]"
slack = [
    "slack_sdk>=3.42",
]

# pip install "lib-utils[selenium]"
selenium = [
    "selenium>=4.35",
    "webdriver_manager>=4.0",
]

# pip install "lib-utils[math]"
math = [
    "sympy>=1.14",
    "eseries>=1.2",
]

# pip install "lib-utils[win]"  (Windows only)
win = [
    "pywin32>=311",
    "pygetwindow>=0.0.9",
    "pyautogui>=0.9.54",
    "pynput>=1.8",
    "pycaw>=20251023",
]

# pip install "lib-utils[all]"  (win excluded — Windows-only deps)
all = [
    "lib-utils[requests]",
    "lib-utils[git]",
    "lib-utils[crypto]",
    "lib-utils[pdf]",
    "lib-utils[sql]",
    "lib-utils[cv]",
    "lib-utils[clipboard]",
    "lib-utils[pillow]",
    "lib-utils[widgets]",
    "lib-utils[slack]",
    "lib-utils[selenium]",
    "lib-utils[math]",
]

[tool.setuptools.packages.find]
include = ["utils", "utils.*"]
